frontend/meta_parse.output
   0  $accept : %entry% $end

   1  main : line main
   2       | line
   3       | EOF

   4  line : INIT_LINE init_expr
   5       | OBS_LINE obs_expr
   6       | STORY_LINE story_expr
   7       | MODIF_LINE modif_expr
   8       | GEN_LINE gen_expr
   9       | CONC_LINE gen_expr
  10       | BEGIN_MAC_LINE macro_def
  11       | END_MAC_LINE newline
  12       | EXPAND_MAC_LINE macro_call
  13       | newline2
  14       | named_rule_expr
  15       | error

  16  modif_expr : concentration_ineq DO assignement newline
  17             | time_ineq DO assignement newline
  18             | error

  19  assignement : LABEL SET assign_expr
  20              | LABEL SET error

  21  assign_expr : OP_PAR assign_expr CL_PAR
  22              | assign_val MULT assign_expr
  23              | assign_val PLUS assign_expr
  24              | assign_val DIVIDE assign_expr
  25              | assign_val

  26  assign_val : FLOAT
  27             | INT
  28             | INFINITY
  29             | LABEL
  30             | id

  31  concentration_ineq : conc_expr GREATER conc_expr
  32                     | conc_expr SMALLER conc_expr

  33  conc_expr : OP_PAR conc_expr CL_PAR
  34            | conc_val MULT conc_expr
  35            | conc_val DIVIDE conc_expr
  36            | conc_val PLUS conc_expr
  37            | conc_val

  38  conc_val : FLOAT
  39           | INT
  40           | OP_CONC LABEL CL_CONC
  41           | OP_CONC error

  42  time_ineq : TIME GREATER FLOAT
  43            | TIME GREATER INT
  44            | TIME error

  45  init_expr : newline
  46            | mult_sol_expr newline

  47  mult_sol_expr : INT MULT ne_sol_expr
  48                | FLOAT MULT ne_sol_expr
  49                | ne_sol_expr

  50  ne_sol_expr : OP_PAR ne_sol_expr CL_PAR
  51              | agent_expr
  52              | ne_sol_expr COMMA agent_expr

  53  agent_expr : id OP_PAR interface_expr CL_PAR
  54             | id OP_PAR interface_expr error

  55  interface_expr :
  56                 | id state_expr link_expr
  57                 | id state_expr link_expr COMMA interface_expr

  58  state_expr :
  59             | KAPPA_MRK id

  60  link_expr :
  61            | KAPPA_LNK INT
  62            | KAPPA_LNK KAPPA_SEMI
  63            | KAPPA_LNK error
  64            | KAPPA_WLD

  65  obs_expr : LABEL newline
  66           | ne_sol_expr newline
  67           | LABEL ne_sol_expr newline

  68  story_expr : LABEL newline

  69  named_rule_expr : LABEL rule_expr newline
  70                  | rule_expr newline

  71  sol_expr :
  72           | ne_sol_expr

  73  rule_expr : sol_expr KAPPA_RAR sol_expr kin_expr1 constraint_expr
  74            | sol_expr KAPPA_LRAR sol_expr kin_expr2 constraint_expr

  75  constraint_expr :
  76                  | OP_CONC cstr_list CL_CONC

  77  cstr_list :
  78            | id
  79            | id SEMICOLON cstr_list

  80  kin_expr1 :
  81            | AT var_kin intra_rate
  82            | AT error

  83  kin_expr2 :
  84            | AT var_kin intra_rate COMMA var_kin
  85            | AT error

  86  var_kin : KAPPA_WLD
  87          | FLOAT
  88          | INFINITY
  89          | INT

  90  intra_rate :
  91             | OP_PAR FLOAT CL_PAR
  92             | OP_PAR INT CL_PAR
  93             | OP_PAR INFINITY CL_PAR

  94  gen_expr : agent_expr newline
  95           | id EQUAL id newline
  96           | id EQUAL id OP_CONC instruction_list CL_CONC newline

  97  instruction_list :
  98                   | instruction_ne_list

  99  instruction_ne_list : instruction
 100                      | instruction instruction_ne_list

 101  instruction : PLUS id
 102              | MINUS id
 103              | id DIVIDE OP_ACC id_list CL_ACC
 104              | id SET id

 105  id_list :
 106          | id_non_empty_list

 107  id_non_empty_list : id
 108                    | id id_non_empty_list

 109  newline : NEWLINE
 110          | COMMENT
 111          | EOF

 112  newline2 : NEWLINE
 113           | COMMENT

 114  id : ID
 115     | ID INSTANCE INT

 116  macro_def : id OP_PAR idlistcomma CL_PAR newline

 117  macro_call : id OP_PAR idlistlist CL_PAR newline

 118  idlistcomma :
 119              | ne_idlistcomma

 120  ne_idlistcomma : id
 121                 | id COMMA ne_idlistcomma

 122  idlist :
 123         | ne_idlist

 124  ne_idlist : id
 125            | id ne_idlist

 126  idlistlist :
 127             | ne_idlistlist

 128  ne_idlistlist : ne_idlist
 129                | idlist COMMA idlistlist

 130  %entry% : '\001' main

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	.  error

	%entry%  goto 2


state 1
	%entry% : '\001' . main  (130)
	sol_expr : .  (71)

	error  shift 3
	INIT_LINE  shift 4
	OBS_LINE  shift 5
	STORY_LINE  shift 6
	NEWLINE  shift 7
	MODIF_LINE  shift 8
	GEN_LINE  shift 9
	CONC_LINE  shift 10
	BEGIN_MAC_LINE  shift 11
	END_MAC_LINE  shift 12
	EXPAND_MAC_LINE  shift 13
	EOF  shift 14
	OP_PAR  shift 15
	ID  shift 16
	LABEL  shift 17
	COMMENT  shift 18
	KAPPA_LRAR  reduce 71
	KAPPA_RAR  reduce 71

	main  goto 19
	line  goto 20
	newline2  goto 21
	named_rule_expr  goto 22
	id  goto 23
	ne_sol_expr  goto 24
	agent_expr  goto 25
	rule_expr  goto 26
	sol_expr  goto 27


state 2
	$accept : %entry% . $end  (0)

	$end  accept


state 3
	line : error .  (15)

	.  reduce 15


state 4
	line : INIT_LINE . init_expr  (4)

	NEWLINE  shift 28
	EOF  shift 29
	OP_PAR  shift 15
	INT  shift 30
	FLOAT  shift 31
	ID  shift 16
	COMMENT  shift 32
	.  error

	init_expr  goto 33
	newline  goto 34
	id  goto 23
	mult_sol_expr  goto 35
	ne_sol_expr  goto 36
	agent_expr  goto 25


state 5
	line : OBS_LINE . obs_expr  (5)

	OP_PAR  shift 15
	ID  shift 16
	LABEL  shift 37
	.  error

	obs_expr  goto 38
	id  goto 23
	ne_sol_expr  goto 39
	agent_expr  goto 25


state 6
	line : STORY_LINE . story_expr  (6)

	LABEL  shift 40
	.  error

	story_expr  goto 41


state 7
	newline2 : NEWLINE .  (112)

	.  reduce 112


state 8
	line : MODIF_LINE . modif_expr  (7)

	error  shift 42
	TIME  shift 43
	OP_PAR  shift 44
	OP_CONC  shift 45
	INT  shift 46
	FLOAT  shift 47
	.  error

	modif_expr  goto 48
	concentration_ineq  goto 49
	time_ineq  goto 50
	conc_expr  goto 51
	conc_val  goto 52


state 9
	line : GEN_LINE . gen_expr  (8)

	ID  shift 16
	.  error

	gen_expr  goto 53
	id  goto 54
	agent_expr  goto 55


state 10
	line : CONC_LINE . gen_expr  (9)

	ID  shift 16
	.  error

	gen_expr  goto 56
	id  goto 54
	agent_expr  goto 55


state 11
	line : BEGIN_MAC_LINE . macro_def  (10)

	ID  shift 16
	.  error

	macro_def  goto 57
	id  goto 58


state 12
	line : END_MAC_LINE . newline  (11)

	NEWLINE  shift 28
	EOF  shift 29
	COMMENT  shift 32
	.  error

	newline  goto 59


state 13
	line : EXPAND_MAC_LINE . macro_call  (12)

	ID  shift 16
	.  error

	macro_call  goto 60
	id  goto 61


state 14
	main : EOF .  (3)

	.  reduce 3


state 15
	ne_sol_expr : OP_PAR . ne_sol_expr CL_PAR  (50)

	OP_PAR  shift 15
	ID  shift 16
	.  error

	id  goto 23
	ne_sol_expr  goto 62
	agent_expr  goto 25


state 16
	id : ID .  (114)
	id : ID . INSTANCE INT  (115)

	INSTANCE  shift 63
	error  reduce 114
	NEWLINE  reduce 114
	EOF  reduce 114
	MULT  reduce 114
	DIVIDE  reduce 114
	PLUS  reduce 114
	MINUS  reduce 114
	COMMA  reduce 114
	SEMICOLON  reduce 114
	SET  reduce 114
	EQUAL  reduce 114
	KAPPA_LNK  reduce 114
	KAPPA_WLD  reduce 114
	OP_PAR  reduce 114
	CL_PAR  reduce 114
	OP_CONC  reduce 114
	CL_CONC  reduce 114
	CL_ACC  reduce 114
	ID  reduce 114
	KAPPA_MRK  reduce 114
	COMMENT  reduce 114


state 17
	named_rule_expr : LABEL . rule_expr newline  (69)
	sol_expr : .  (71)

	OP_PAR  shift 15
	ID  shift 16
	KAPPA_LRAR  reduce 71
	KAPPA_RAR  reduce 71

	id  goto 23
	ne_sol_expr  goto 24
	agent_expr  goto 25
	rule_expr  goto 64
	sol_expr  goto 27


state 18
	newline2 : COMMENT .  (113)

	.  reduce 113


state 19
	%entry% : '\001' main .  (130)

	.  reduce 130


state 20
	main : line . main  (1)
	main : line .  (2)
	sol_expr : .  (71)

	error  shift 3
	INIT_LINE  shift 4
	OBS_LINE  shift 5
	STORY_LINE  shift 6
	NEWLINE  shift 7
	MODIF_LINE  shift 8
	GEN_LINE  shift 9
	CONC_LINE  shift 10
	BEGIN_MAC_LINE  shift 11
	END_MAC_LINE  shift 12
	EXPAND_MAC_LINE  shift 13
	EOF  shift 14
	OP_PAR  shift 15
	ID  shift 16
	LABEL  shift 17
	COMMENT  shift 18
	$end  reduce 2
	KAPPA_LRAR  reduce 71
	KAPPA_RAR  reduce 71

	main  goto 65
	line  goto 20
	newline2  goto 21
	named_rule_expr  goto 22
	id  goto 23
	ne_sol_expr  goto 24
	agent_expr  goto 25
	rule_expr  goto 26
	sol_expr  goto 27


state 21
	line : newline2 .  (13)

	.  reduce 13


state 22
	line : named_rule_expr .  (14)

	.  reduce 14


state 23
	agent_expr : id . OP_PAR interface_expr CL_PAR  (53)
	agent_expr : id . OP_PAR interface_expr error  (54)

	OP_PAR  shift 66
	.  error


state 24
	ne_sol_expr : ne_sol_expr . COMMA agent_expr  (52)
	sol_expr : ne_sol_expr .  (72)

	COMMA  shift 67
	NEWLINE  reduce 72
	EOF  reduce 72
	AT  reduce 72
	KAPPA_LRAR  reduce 72
	KAPPA_RAR  reduce 72
	OP_CONC  reduce 72
	COMMENT  reduce 72


state 25
	ne_sol_expr : agent_expr .  (51)

	.  reduce 51


state 26
	named_rule_expr : rule_expr . newline  (70)

	NEWLINE  shift 28
	EOF  shift 29
	COMMENT  shift 32
	.  error

	newline  goto 68


state 27
	rule_expr : sol_expr . KAPPA_RAR sol_expr kin_expr1 constraint_expr  (73)
	rule_expr : sol_expr . KAPPA_LRAR sol_expr kin_expr2 constraint_expr  (74)

	KAPPA_LRAR  shift 69
	KAPPA_RAR  shift 70
	.  error


state 28
	newline : NEWLINE .  (109)

	.  reduce 109


state 29
	newline : EOF .  (111)

	.  reduce 111


state 30
	mult_sol_expr : INT . MULT ne_sol_expr  (47)

	MULT  shift 71
	.  error


state 31
	mult_sol_expr : FLOAT . MULT ne_sol_expr  (48)

	MULT  shift 72
	.  error


state 32
	newline : COMMENT .  (110)

	.  reduce 110


state 33
	line : INIT_LINE init_expr .  (4)

	.  reduce 4


state 34
	init_expr : newline .  (45)

	.  reduce 45


state 35
	init_expr : mult_sol_expr . newline  (46)

	NEWLINE  shift 28
	EOF  shift 29
	COMMENT  shift 32
	.  error

	newline  goto 73


state 36
	mult_sol_expr : ne_sol_expr .  (49)
	ne_sol_expr : ne_sol_expr . COMMA agent_expr  (52)

	COMMA  shift 67
	NEWLINE  reduce 49
	EOF  reduce 49
	COMMENT  reduce 49


state 37
	obs_expr : LABEL . newline  (65)
	obs_expr : LABEL . ne_sol_expr newline  (67)

	NEWLINE  shift 28
	EOF  shift 29
	OP_PAR  shift 15
	ID  shift 16
	COMMENT  shift 32
	.  error

	newline  goto 74
	id  goto 23
	ne_sol_expr  goto 75
	agent_expr  goto 25


state 38
	line : OBS_LINE obs_expr .  (5)

	.  reduce 5


state 39
	ne_sol_expr : ne_sol_expr . COMMA agent_expr  (52)
	obs_expr : ne_sol_expr . newline  (66)

	NEWLINE  shift 28
	EOF  shift 29
	COMMA  shift 67
	COMMENT  shift 32
	.  error

	newline  goto 76


state 40
	story_expr : LABEL . newline  (68)

	NEWLINE  shift 28
	EOF  shift 29
	COMMENT  shift 32
	.  error

	newline  goto 77


state 41
	line : STORY_LINE story_expr .  (6)

	.  reduce 6


state 42
	modif_expr : error .  (18)

	.  reduce 18


state 43
	time_ineq : TIME . GREATER FLOAT  (42)
	time_ineq : TIME . GREATER INT  (43)
	time_ineq : TIME . error  (44)

	error  shift 78
	GREATER  shift 79
	.  error


state 44
	conc_expr : OP_PAR . conc_expr CL_PAR  (33)

	OP_PAR  shift 44
	OP_CONC  shift 45
	INT  shift 46
	FLOAT  shift 47
	.  error

	conc_expr  goto 80
	conc_val  goto 52


state 45
	conc_val : OP_CONC . LABEL CL_CONC  (40)
	conc_val : OP_CONC . error  (41)

	error  shift 81
	LABEL  shift 82
	.  error


state 46
	conc_val : INT .  (39)

	.  reduce 39


state 47
	conc_val : FLOAT .  (38)

	.  reduce 38


state 48
	line : MODIF_LINE modif_expr .  (7)

	.  reduce 7


state 49
	modif_expr : concentration_ineq . DO assignement newline  (16)

	DO  shift 83
	.  error


state 50
	modif_expr : time_ineq . DO assignement newline  (17)

	DO  shift 84
	.  error


state 51
	concentration_ineq : conc_expr . GREATER conc_expr  (31)
	concentration_ineq : conc_expr . SMALLER conc_expr  (32)

	GREATER  shift 85
	SMALLER  shift 86
	.  error


state 52
	conc_expr : conc_val . MULT conc_expr  (34)
	conc_expr : conc_val . DIVIDE conc_expr  (35)
	conc_expr : conc_val . PLUS conc_expr  (36)
	conc_expr : conc_val .  (37)

	MULT  shift 87
	DIVIDE  shift 88
	PLUS  shift 89
	GREATER  reduce 37
	SMALLER  reduce 37
	DO  reduce 37
	CL_PAR  reduce 37


state 53
	line : GEN_LINE gen_expr .  (8)

	.  reduce 8


state 54
	agent_expr : id . OP_PAR interface_expr CL_PAR  (53)
	agent_expr : id . OP_PAR interface_expr error  (54)
	gen_expr : id . EQUAL id newline  (95)
	gen_expr : id . EQUAL id OP_CONC instruction_list CL_CONC newline  (96)

	EQUAL  shift 90
	OP_PAR  shift 66
	.  error


state 55
	gen_expr : agent_expr . newline  (94)

	NEWLINE  shift 28
	EOF  shift 29
	COMMENT  shift 32
	.  error

	newline  goto 91


state 56
	line : CONC_LINE gen_expr .  (9)

	.  reduce 9


state 57
	line : BEGIN_MAC_LINE macro_def .  (10)

	.  reduce 10


state 58
	macro_def : id . OP_PAR idlistcomma CL_PAR newline  (116)

	OP_PAR  shift 92
	.  error


state 59
	line : END_MAC_LINE newline .  (11)

	.  reduce 11


state 60
	line : EXPAND_MAC_LINE macro_call .  (12)

	.  reduce 12


state 61
	macro_call : id . OP_PAR idlistlist CL_PAR newline  (117)

	OP_PAR  shift 93
	.  error


state 62
	ne_sol_expr : OP_PAR ne_sol_expr . CL_PAR  (50)
	ne_sol_expr : ne_sol_expr . COMMA agent_expr  (52)

	COMMA  shift 67
	CL_PAR  shift 94
	.  error


state 63
	id : ID INSTANCE . INT  (115)

	INT  shift 95
	.  error


state 64
	named_rule_expr : LABEL rule_expr . newline  (69)

	NEWLINE  shift 28
	EOF  shift 29
	COMMENT  shift 32
	.  error

	newline  goto 96


state 65
	main : line main .  (1)

	.  reduce 1


state 66
	agent_expr : id OP_PAR . interface_expr CL_PAR  (53)
	agent_expr : id OP_PAR . interface_expr error  (54)
	interface_expr : .  (55)

	ID  shift 16
	error  reduce 55
	CL_PAR  reduce 55

	id  goto 97
	interface_expr  goto 98


state 67
	ne_sol_expr : ne_sol_expr COMMA . agent_expr  (52)

	ID  shift 16
	.  error

	id  goto 23
	agent_expr  goto 99


state 68
	named_rule_expr : rule_expr newline .  (70)

	.  reduce 70


state 69
	rule_expr : sol_expr KAPPA_LRAR . sol_expr kin_expr2 constraint_expr  (74)
	sol_expr : .  (71)

	OP_PAR  shift 15
	ID  shift 16
	NEWLINE  reduce 71
	EOF  reduce 71
	AT  reduce 71
	OP_CONC  reduce 71
	COMMENT  reduce 71

	id  goto 23
	ne_sol_expr  goto 24
	agent_expr  goto 25
	sol_expr  goto 100


state 70
	rule_expr : sol_expr KAPPA_RAR . sol_expr kin_expr1 constraint_expr  (73)
	sol_expr : .  (71)

	OP_PAR  shift 15
	ID  shift 16
	NEWLINE  reduce 71
	EOF  reduce 71
	AT  reduce 71
	OP_CONC  reduce 71
	COMMENT  reduce 71

	id  goto 23
	ne_sol_expr  goto 24
	agent_expr  goto 25
	sol_expr  goto 101


state 71
	mult_sol_expr : INT MULT . ne_sol_expr  (47)

	OP_PAR  shift 15
	ID  shift 16
	.  error

	id  goto 23
	ne_sol_expr  goto 102
	agent_expr  goto 25


state 72
	mult_sol_expr : FLOAT MULT . ne_sol_expr  (48)

	OP_PAR  shift 15
	ID  shift 16
	.  error

	id  goto 23
	ne_sol_expr  goto 103
	agent_expr  goto 25


state 73
	init_expr : mult_sol_expr newline .  (46)

	.  reduce 46


state 74
	obs_expr : LABEL newline .  (65)

	.  reduce 65


state 75
	ne_sol_expr : ne_sol_expr . COMMA agent_expr  (52)
	obs_expr : LABEL ne_sol_expr . newline  (67)

	NEWLINE  shift 28
	EOF  shift 29
	COMMA  shift 67
	COMMENT  shift 32
	.  error

	newline  goto 104

